--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "module1",
+  "name": "LowStore",
   "author": "Pedro Valverde",
   "version": "1.0.0",
   "main": "index.js",
@@ -14,7 +14,7 @@
     "nodemon": "^2.0.2"
   },
   "scripts": {
-    "dev": "nodemon backend/server.js",
-    "tests": "nodemon tests/tests.js"
+    "dev": "nodemon /server.js",
+    "tests": "nodemon ../tests/tests.js"
   }
 }
