--- a/backend/package.json
+++ b/backend/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "git": "^0.1.5",
-    "body-parser": "^1.19.0",
     "mongoose": "^5.8.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "eslint": "^6.8.0",
+    "nodemon": "^2.0.2",
+    "standard": "^14.3.1"
   },
   "scripts": {
     "dev": "nodemon /server.js",
