--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,11 @@
   "name": "LowStore",
   "author": "Pedro Valverde",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "curl": "^0.1.4",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
