--- a/Front2/package.json
+++ b/Front2/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^3.26.6",
     "axios": "^0.19.1",
     "font-awesome": "^4.7.0",
     "prop-types": "^15.7.2",
@@ -16,6 +17,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "save": "^2.4.0",
+    "semantic-ui-react": "^0.88.2",
     "styled-components": "^4.4.1"
   },
   "scripts": {
